# p2p-music-player

./: .clang-format  .gitignore  NETWORK.md  README.md
src/: BufferedAudioTest.cpp  CMakeLists.txt  Phase1.cpp  application-client.cpp  application-client.h  application.cpp  application.h  base-client.cpp  base-client.h  bufferedaudio.cpp  bufferedaudio.h  chunked-file.cpp  chunked-file.h  client.cpp  client.h  file-sharing.cpp  file-sharing.h  listfiles.cpp  listfiles.h  lrc.cpp  lrc.h  main.cpp  md5.cpp  md5.h  message-type.h  message.cpp  message.h  network-example.cpp  network-test.cpp  picture-sharing.cpp  picture-sharing.h  src  store-type.h  store-types.cpp  store-types.h  store.cpp  store.h  tsqueue.h  util.cpp  util.h  (+2 more)
src/tests/: test_chunk.cpp  test_db.cpp  test_filesharing.cpp  test_lrc.cpp  test_msg.cpp  test_tsqueue.cpp
src/tests/data/: apple_of_my_eye.lrc  ikenai_taiyou.lrc  jamaica_farewell.lrc  jamaica_farewell_first_verse.lrc  test.lrc
